--- a/result.html
+++ b/result.html
@@ -44,7 +44,7 @@
 
     <script>
         const savedImage = localStorage.getItem('capturedImage');
-        const correctPassword = "rahasia123"; // Ganti dengan kode akses yang hanya Anda tahu
+        const correctPassword = "rahasia123"; 
 
         function checkAccess() {
             const enteredPassword = document.getElementById('passwordInput').value;
